logs/server.log
Starting a Gradle Daemon (subsequent builds will be faster)

> Task :compileJava FAILED
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:53: error: illegal start of expression
	public Integer count() {
	^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:53: error: ';' expected
	public Integer count() {
	                    ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:57: error: illegal start of expression
	public void updateUser(User user) {
	^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:57: error: illegal start of expression
	public void updateUser(User user) {
	       ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:57: error: ';' expected
	public void updateUser(User user) {
	                      ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:57: error: ';' expected
	public void updateUser(User user) {
	                                ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:62: error: illegal start of expression
	public void updateUserPassword(User user) {
	^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:62: error: illegal start of expression
	public void updateUserPassword(User user) {
	       ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:62: error: ';' expected
	public void updateUserPassword(User user) {
	                              ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:62: error: ';' expected
	public void updateUserPassword(User user) {
	                                        ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:66: error: illegal start of expression
	public void removeUser(String username) {
	^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:66: error: illegal start of expression
	public void removeUser(String username) {
	       ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:66: error: ';' expected
	public void removeUser(String username) {
	                      ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:66: error: ';' expected
	public void removeUser(String username) {
	                                      ^
/Users/pranoyde/Desktop/src/workshop-terracotta-bank/src/main/java/com/joshcummings/codeplay/terracotta/service/UserService.java:69: error: reached end of file while parsing
}
 ^
15 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 8s
1 actionable task: 1 executed
